--- a/api-proxy-server/tsconfig.json
+++ b/api-proxy-server/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "module": "ES2022",
-    "moduleResolution": "bundler",
-    "target": "ES2023",
-    "skipLibCheck": true,
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "strict": true
-  }
+    "resolveJsonModule": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
+  },
+  "include": ["src"]
 }
