--- a/auth/package.json
+++ b/auth/package.json
@@ -4,13 +4,12 @@
   "description": "auth service for Studio S Manager",
   "license": "ISC",
   "author": "Mansoor",
-  "type": "commonjs",
-  "main": "app.js",
+  "type": "module",
+  "main": "dist/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.ts",
-    "dev": "nodemon server.ts",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "build": "tsc --skipLibCheck",
+    "start": "node dist/server.js",
+    "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -23,8 +22,10 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "validator": "^13.15.20",
     "xss": "^1.0.15"
   },
   "devDependencies": {
@@ -33,9 +34,14 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.8.1",
+    "@types/validator": "^13.15.4",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
