--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.1",
     "data-fns": "^1.1.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
@@ -24,7 +25,8 @@
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
