--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "author": "Mansoor",
   "type": "module",
-  "main": "dist/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc --skipLibCheck",
     "start": "node dist/server.js",
@@ -22,11 +22,13 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "validator": "^13.15.20",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
