--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,8 +2,11 @@
   "compilerOptions": {
     "module": "ES2022",
     "moduleResolution": "bundler",
+    "rootDir": "src",
+    "outDir": "dist",
     "target": "ES2023",
     "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "include": ["src"]
 }
