--- a/auth/package.json
+++ b/auth/package.json
@@ -12,6 +12,7 @@
     "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
+    "argon2": "^0.44.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
