--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "zod": "^4.1.12"
@@ -30,6 +31,8 @@
     "@types/node": "^24.9.1",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
