--- a/api-proxy-server/Dockerfile
+++ b/api-proxy-server/Dockerfile
@@ -1,16 +1,46 @@
-FROM node:18-alpine
+# Build stage
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
 
+# Install dependencies
 RUN npm ci
 
+# Copy source code
 COPY . .
 
+# Build TypeScript
 RUN npm run build
+
+# Production stage
+FROM node:20-alpine
+
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install production dependencies only
+RUN npm ci --only=production
+
+# Copy built files from builder
+COPY --from=builder /app/dist ./dist
+
+# Create logs directory
+RUN mkdir -p logs
+
+# Add non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+# Change ownership
+RUN chown -R nodejs:nodejs /app
+
+USER nodejs
 
 EXPOSE 4000
 
-CMD ["npm", "start"]
+CMD ["node", "dist/server.js"]
