--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,16 +1,59 @@
-FROM node:18-alpine
+# Build stage
+FROM node:20-alpine AS builder
 
+# Set working directory
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
 
+# Install dependencies (including devDependencies for build)
 RUN npm ci
 
+# Copy source code
 COPY . .
 
+# Build TypeScript
 RUN npm run build
 
-EXPOSE 4002
+# Remove devDependencies
+RUN npm prune --production
 
-CMD ["npm", "start"]
+# Production stage
+FROM node:20-alpine AS production
+
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+# Set working directory
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Copy built application from builder
+COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
+
+# Create logs directory with proper permissions
+RUN mkdir -p logs && chown -R nodejs:nodejs logs
+
+# Switch to non-root user
+USER nodejs
+
+# Expose port
+EXPOSE 5002
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:5002/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+
+# Use dumb-init to handle signals properly
+ENTRYPOINT ["dumb-init", "--"]
+
+# Start application
+CMD ["node", "dist/server.js"]
