--- a/auth/package.json
+++ b/auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auth-service",
   "version": "1.0.0",
-  "description": "auth service for Studio S Manager",
+  "description": "Authentication service for Studio S Manager",
   "license": "ISC",
   "author": "Mansoor",
   "type": "module",
@@ -9,11 +9,14 @@
   "scripts": {
     "build": "tsc --skipLibCheck",
     "start": "node dist/server.js",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "argon2": "^0.44.0",
-    "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,11 +27,10 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jose": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "validator": "^13.15.20",
-    "xss": "^1.0.15",
+    "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -37,7 +39,6 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.8.1",
     "@types/validator": "^13.15.4",
