Create tests. Some of backend  done

--- a/auth/package.json
+++ b/auth/package.json
@@ -12,11 +12,18 @@
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:auth": "./tests/auth-tests.sh",
+    "test:security": "./tests/security-tests.sh",
+    "test:all": "./tests/run-all-tests.sh",
+    "test:load": "node tests/performance/benchmark.js"
   },
   "dependencies": {
     "argon2": "^0.44.0",
+    "body-parser": "^2.2.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -34,15 +41,22 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.8.1",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.4",
+    "autocannon": "^8.0.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
