--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "http-errors": "^2.0.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
+    "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
