Some tests passing.

--- a/auth/package.json
+++ b/auth/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:integration": "jest --testPathPattern=integration",
+    "test:integration": "jest --testPathPatterns=integration",
     "test:auth": "./tests/auth-tests.sh",
     "test:security": "./tests/security-tests.sh",
     "test:all": "./tests/run-all-tests.sh",
@@ -34,6 +34,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jose": "^6.1.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "validator": "^13.15.20",
