--- a/api-proxy-server/package.json
+++ b/api-proxy-server/package.json
@@ -34,9 +34,11 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5",
+    "jose": "^6.1.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   }
