--- a/api-proxy-server/package.json
+++ b/api-proxy-server/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
+    "@types/express-http-proxy": "^1.6.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-http-proxy": "^2.1.2",
     "express-jwt": "^8.5.1",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
