--- a/auth/.dockerignore
+++ b/auth/.dockerignore
@@ -2,7 +2,6 @@
 node_modules/
 npm-debug.log
 yarn-error.log
-package-lock.json
 
 # Build output (will be created in container)
 dist/
@@ -56,7 +55,6 @@ docker-compose*.yml
 .editorconfig
 .prettierrc*
 .eslintrc*
-tsconfig.json
 temp/
 tmp/
 *.pem
@@ -67,3 +65,6 @@ tmp/
 *.backup
 *-backup
 auth-backup/
+
+# Specific files
+authControllerOld.ts
