--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,12 +6,13 @@ WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 
 # Copy all source files
 COPY . .
 
 # Build the production version
+# Note: We don't set VITE_API_BASE_URL here because it will be set at runtime
 RUN npm run build
 
 # Step 2: Serve with Nginx
@@ -20,16 +21,18 @@ FROM nginx:stable-alpine
 # Copy build output to Nginx html directory
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom Nginx config (optional)
+# Copy custom Nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy entrypoint script that writes env.js at runtime
-COPY /docker-entrypoint.sh /docker-entrypoint.sh
+COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
-# Expose port 5173
-EXPOSE 5173
+# Expose port 80 (nginx default)
+EXPOSE 80
 
+# Use entrypoint to generate env.js at runtime
 ENTRYPOINT ["/docker-entrypoint.sh"]
+
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
