--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,8 +2,22 @@ server {
     listen 80;
     server_name _;
 
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
     root /usr/share/nginx/html;
     index index.html;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/x-javascript application/xml+rss 
+               application/json application/javascript;
 
     # Avoid caching env.js so runtime changes take effect
     location = /env.js {
@@ -11,22 +25,61 @@ server {
         try_files /env.js =404;
     }
 
-    # Proxy API requests to gateway (Docker network hostname)
-    # This only works if nginx container and gateway are on same docker network.
+    # Proxy all /api requests to gateway
     location /api/ {
-        proxy_pass http://gateway:4000/;
+        # Remove /api prefix when forwarding to gateway
+        rewrite ^/api/(.*)$ /$1 break;
+        
+        proxy_pass http://gateway:4000;
+        proxy_http_version 1.1;
+        
+        # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        
+        # WebSocket support (if needed)
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Buffer settings
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        proxy_busy_buffers_size 8k;
+        
+        # Don't pass these headers to backend
+        proxy_set_header Accept-Encoding "";
     }
 
-    # If your client calls /auth or /login at top-level, you can proxy them too:
-    location = /login {
-        proxy_pass http://gateway:4000/login;
+    # Static assets with caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
 
+    # SPA routing - serve index.html for all non-file requests
     location / {
         try_files $uri $uri/ /index.html;
+        
+        # Don't cache index.html
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # Health check endpoint
+    location = /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 }
