--- a/api-proxy-server/package.json
+++ b/api-proxy-server/package.json
@@ -41,6 +41,7 @@
     "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.1",
     "node-cache": "^5.1.2",
+    "prom-client": "^15.1.3",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   }
