--- a/auth/package.json
+++ b/auth/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "prom-client": "^15.1.3",
     "validator": "^13.15.20",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
