Start with google contacts sync. Basically fully built but not tested at all.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ backend/tmp/
 backend/coverage/
 backend/build/
 backend/.parcel-cache/
+
+# Google Contacts Service
+client_secret*
+google-contacts-service/certs/*
