--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Logs
+logs/
 *logs
 *.log
 *npm-debug.log*
@@ -22,9 +23,12 @@
 *.njsproj
 *.sln
 *.sw?
+
 # Environment files
 *.env
 *.env.*
+.env.local
+.env.*.local
 
 # Frontend (React)
 frontend/build/
@@ -71,3 +75,36 @@ backend/.parcel-cache/
 # Google Contacts Service
 client_secret*
 google-contacts-service/certs/*
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Docker
+*.tar
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
