--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -22,6 +23,7 @@
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prom-client": "^15.1.3",
     "winston": "^3.18.3",
@@ -31,6 +33,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
