Start concentrating on metrics and logging for app and infrastructure

--- a/monitoring/promtail-config.yml
+++ b/monitoring/promtail-config.yml
@@ -28,6 +28,7 @@ scrape_configs:
           expressions:
             level: level
             message: message
+            service: service
             timestamp: timestamp
       - labels:
           level:
