--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "pino": "^10.2.0",
     "prom-client": "^15.1.3",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
