--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.1",
     "data-fns": "^1.1.0",
+    "dexie": "^4.2.1",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
