--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.3.0",
     "styled-components": "^6.1.19",
     "zod": "^4.1.12"
