--- a/whatsapp-notification-service/Dockerfile.worker
+++ b/whatsapp-notification-service/Dockerfile.worker
@@ -1,4 +1,3 @@
-# Dockerfile.worker
 FROM python:3.11-slim
 
 WORKDIR /app
@@ -18,5 +17,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Run worker
+# Run worker (make sure this matches your file name)
 CMD ["python", "worker.py"]
