--- a/whatsapp-notification-service/requirements.txt
+++ b/whatsapp-notification-service/requirements.txt
@@ -2,6 +2,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 APScheduler==3.11.2
+asyncpg==0.31.0
 certifi==2025.11.12
 click==8.3.1
 colorama==0.4.6
@@ -11,6 +12,8 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+nexus-rpc==1.3.0
+protobuf==6.33.4
 psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic-settings==2.12.0
@@ -18,6 +21,9 @@ pydantic_core==2.41.5
 python-dotenv==1.2.1
 SQLAlchemy==2.0.45
 starlette==0.50.0
+structlog==25.5.0
+temporalio==1.21.1
+types-protobuf==6.32.1.20251210
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
